--- a/themes/hugo-apero/layouts/about/list.html
+++ b/themes/hugo-apero/layouts/about/list.html
@@ -60,7 +60,7 @@
             <h2 class="f-subheadline f4-ns fw6">{{ .Params.author }}</h2>
             <h5 class="f-subheadline f4 fw2 ttu tracked">{{ .Params.role | markdownify }}</h5>
             {{ if .Params.show_social_links }}
-              <div class="site-social-links db dtc-l v-mid w-100 w-33-l tc pv2">
+              <div class="site-social-links db v-mid pv2">
               {{ partial "shared/social-links.html" . }}
               </div>
             {{ end }}
