--- a/themes/hugo-apero/layouts/partials/shared/summary-li.html
+++ b/themes/hugo-apero/layouts/partials/shared/summary-li.html
@@ -32,15 +32,10 @@
             </a>
           </figure>
 
-        {{ if .Params.excerpt }}
-          <div class="w-100 w-80-ns pl3-ns">
-          <p class="measure lh-copy cf">{{ .Params.excerpt | markdownify }}
-        {{ else }}
-          <div class="w-100 w-80-ns pl3-ns">
-          <p class="measure lh-copy cf">{{ .Summary | markdownify }}
-        {{ end }}
+        <div class="w-100 w-80-ns pl3-ns">
+        <p class="measure lh-copy cf">{{ if .Params.Excerpt }}{{ .Params.Excerpt | markdownify }}{{ else }}{{ .Summary | markdownify }}</p>{{ end }}
           <a href="{{ .RelPermalink }}">Read more</a></p>
-          </div>
+        </div>
     </article>
   {{ end }} <!--end range across grouped pages-->
 
